--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
+    "faker": "^6.6.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
