--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "@inrupt/solid-ui-react": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
