--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,13 +4,15 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@inrupt/prism-react-components": "^0.13.9",
+    "@inrupt/solid-ui-react": "^2.3.1",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.5",
+    "@mui/material": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.11.14",
-    "@types/react": "^17.0.37",
+    "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
@@ -19,8 +21,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2",
-    "@inrupt/solid-ui-react": "^2.3.1"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
