--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
