--- a/restapi/package.json
+++ b/restapi/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "express-prom-bundle": "^6.4.1",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.4",
