--- a/restapi/package.json
+++ b/restapi/package.json
@@ -9,16 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@inrupt/solid-client": "^1.20.0",
+    "@inrupt/solid-client-authn-browser": "^1.11.6",
+    "@inrupt/vocab-common-rdf": "^1.0.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-prom-bundle": "^6.4.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.4",
-    "prom-client": "^14.0.1",
-		"@inrupt/solid-client": "^1.20.0",
-		"@inrupt/solid-client-authn-browser": "^1.11.6",
-		"@inrupt/vocab-common-rdf": "^1.0.3"
+    "prom-client": "^14.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -26,12 +27,12 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.2",
     "@types/supertest": "^2.0.11",
+    "css-loader": "^6.7.1",
     "jest": "^27.4.7",
+    "style-loader": "^3.3.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4",
-		"css-loader": "^6.7.1",
-		"style-loader": "^3.3.1"
+    "typescript": "^4.5.4"
   }
 }
