--- a/restapi/package.json
+++ b/restapi/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@inrupt/solid-client": "^1.20.0",
     "@inrupt/solid-client-authn-browser": "^1.11.6",
+    "@inrupt/solid-client-authn-node": "^1.11.7",
     "@inrupt/vocab-common-rdf": "^1.0.3",
     "body-parser": "^1.19.2",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-prom-bundle": "^6.4.1",
@@ -22,6 +24,7 @@
     "prom-client": "^14.0.1"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
