--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
@@ -58,7 +58,7 @@
     "jest-cucumber": "^3.0.1",
     "jest-puppeteer": "^6.0.3",
     "puppeteer": "^13.0.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^27.1.2",
     "ts-node-dev": "^1.1.8"
