--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
     "faker": "^6.6.6",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
