--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@inrupt/lit-generated-vocab-common": "^0.3.11",
+    "@inrupt/solid-ui-react": "^2.7.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@testing-library/jest-dom": "^5.16.1",
