--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,10 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@inrupt/lit-generated-vocab-common": "^0.3.11",
+    "@inrupt/solid-client": "^1.21.0",
+    "@inrupt/solid-client-authn-browser": "^1.11.7",
     "@inrupt/solid-ui-react": "^2.7.0",
+    "@inrupt/vocab-common-rdf": "^1.0.3",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
