--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -1,8 +1,13 @@
-name: CI for ASW2122
+name: Develop Deployment
+
+# on:
+#   release:
+#     types: [published]
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - develop
 
 jobs:
   unit-test-webapp:
@@ -11,47 +16,50 @@ jobs:
       run:
         working-directory: webapp
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm ci
-    - run: npm test
-    - uses: codecov/codecov-action@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+      - uses: codecov/codecov-action@v2
   unit-test-restapi:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: restapi
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm ci
-    - run: npm test
-    - uses: codecov/codecov-action@v2
-  e2e-tests:
-    needs: [unit-test-webapp, unit-test-restapi]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm --prefix webapp install
-    - run: npm --prefix restapi install
-    - run: npm --prefix webapp run build
-    - run: npm --prefix webapp run test:e2e
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+      - uses: codecov/codecov-action@v2
+  # e2e-tests:
+  #   needs: [unit-test-webapp, unit-test-restapi]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - uses: actions/setup-node@v2
+  #     with:
+  #       node-version: 16
+  #   - run: npm --prefix webapp install
+  #   - run: npm --prefix restapi install
+  #   - run: npm --prefix webapp run build
+  #   - run: npm --prefix webapp run test:e2e
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [e2e-tests]
+    # needs: [e2e-tests]
+    needs: [unit-test-webapp, unit-test-restapi]
+    env:
+      API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
     steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
-      with:
+      - uses: actions/checkout@v2
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@3.04
+        with:
           name: arquisoft/dede_es4c/webapp
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
@@ -60,14 +68,32 @@ jobs:
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [e2e-tests]
+    # needs: [e2e-tests]
+    needs: [unit-test-webapp, unit-test-restapi]
     steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
-      with:
+      - uses: actions/checkout@v2
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@3.04
+        with:
           name: arquisoft/dede_es4c/restapi
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
+  deploy:
+    name: Deploy over SSH
+    runs-on: ubuntu-latest
+    needs: [docker-push-restapi, docker-push-webapp]
+    steps:
+      - name: Deploy over SSH
+        uses: fifsky/ssh-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          user: ${{ secrets.DEPLOY_USER }}
+          password: ${{ secrets.DEPLOY_PASSWORD }}
+          command: |
+            wget https://raw.githubusercontent.com/Arquisoft/dede_es4c/master/docker-compose-deploy.yml -O docker-compose.yml
+            docker-compose stop
+            docker-compose rm -f
+            docker-compose pull   
+            docker-compose up -d
