--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -16,32 +16,32 @@ jobs:
       run:
         working-directory: webapp
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
       - run: npm ci
       - run: npm test
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
   unit-test-restapi:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: restapi
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
       - run: npm ci
       - run: npm test
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
   # e2e-tests:
   #   needs: [unit-test-webapp, unit-test-restapi]
   #   runs-on: ubuntu-latest
   #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/setup-node@v2
+  #   - uses: actions/checkout@v3
+  #   - uses: actions/setup-node@v3
   #     with:
   #       node-version: 16
   #   - run: npm --prefix webapp install
@@ -52,11 +52,11 @@ jobs:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     # needs: [e2e-tests]
-    needs: [unit-test-webapp, unit-test-restapi]
+    needs: [unit-test-webapp]
     env:
       API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@3.04
         with:
@@ -69,9 +69,9 @@ jobs:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     # needs: [e2e-tests]
-    needs: [unit-test-webapp, unit-test-restapi]
+    needs: [unit-test-restapi]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@3.04
         with:
