--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -85,6 +85,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker-push-restapi, docker-push-webapp]
     steps:
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Deploy over SSH
         uses: fifsky/ssh-action@master
         with:
