--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -57,14 +57,17 @@ jobs:
       API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
     steps:
       - uses: actions/checkout@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
       - name: Publish to Registry
         uses: docker/build-push-action@v2
         with:
           name: arquisoft/dede_es4c/webapp
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
-          registry: ghcr.io
-          workdir: webapp
+          context: webapp
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
@@ -72,14 +75,25 @@ jobs:
     needs: [unit-test-restapi]
     steps:
       - uses: actions/checkout@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
       - name: Publish to Registry
         uses: docker/build-push-action@v2
         with:
           name: arquisoft/dede_es4c/restapi
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
-          registry: ghcr.io
-          workdir: restapi
+          context: restapi
+      # - name: Publish to Registry
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     name: arquisoft/dede_es4c/restapi
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.DOCKER_PUSH_TOKEN }}
+      #     registry: ghcr.io
+      #     workdir: restapi
   deploy:
     name: Deploy over SSH
     runs-on: ubuntu-latest
