--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -25,6 +25,8 @@ jobs:
       - uses: codecov/codecov-action@v3
   unit-test-restapi:
     runs-on: ubuntu-latest
+    env:
+      MONGO_DB_URL: ${{ secrets.MONGO_DB_URL }}
     defaults:
       run:
         working-directory: restapi
