--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -49,6 +49,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [unit-test-webapp, unit-test-restapi]
     # needs: [e2e-tests]
+    env:
+      API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
     steps:
     - uses: actions/checkout@v2
     - name: Publish to Registry
