--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -47,7 +47,7 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    #needs: [unit-test-webapp, unit-test-restapi]
+    needs: [unit-test-webapp, unit-test-restapi]
     # needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
