--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -51,15 +51,13 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
+    needs: [unit-test-webapp, unit-test-restapi]
     # needs: [e2e-tests]
-    needs: [unit-test-webapp]
-    env:
-      API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
     steps:
-      - uses: actions/checkout@v3
-      - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@v4
-        with:
+    - uses: actions/checkout@v2
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@3.04
+      with:
           name: arquisoft/dede_es4c/webapp
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
