--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -50,18 +50,15 @@ jobs:
     needs: [unit-test-webapp, unit-test-restapi]
     # needs: [e2e-tests]
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@v4
-      env:
-        API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
+      uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
-          name: arquisoft/dede_es4c/webapp
+          name: arquisoft/dede_es4b/webapp
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: webapp
-          buildargs: API_URI
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
