--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -47,10 +47,14 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [unit-test-webapp, unit-test-restapi]
-    # needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+          node-version: 16
+    - run: npm ci
+    - run: npm --prefix webapp install
+    - run: npm --prefix webapp run build
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
