--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -26,7 +26,10 @@ jobs:
   unit-test-restapi:
     runs-on: ubuntu-latest
     env:
-      MONGO_DB_URL: ${{ secrets.MONGO_DB_URL }}
+      MONGO_DB: ${{ secrets.MONGO_DB_URL }}
+      SECRET: ${{ secrets.JWT_SECRET }}
+      PASSWD1: ${{ secrets.DB_TEST_USER_PASSWORD_1 }}
+      PASSWD2: ${{ secrets.DB_TEST_USER_PASSWORD_2 }}
     defaults:
       run:
         working-directory: restapi
