--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -1,7 +1,13 @@
+
 version: '3.5'
 services:
   restapi:
-    image: ghcr.io/arquisoft/dede_es4c/restapi:pruebaDespliegue
+    image: ghcr.io/pglez82/asw2122_0/restapi:latest
     ports:
       - "5000:5000"
-  
+  webapp:
+    image: ghcr.io/pglez82/asw2122_0/webapp:latest
+    ports:
+      - "3000:3000"
+    depends_on: 
+      - restapi
