--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -27,6 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MONGO_DB: ${{ secrets.MONGO_DB_URL }}
+      MONGO_TEST_DB: ${{ secrets.MONGO_TEST_DB_URL }}
       SECRET: ${{ secrets.JWT_SECRET }}
       PASSWD1: ${{ secrets.DB_TEST_USER_PASSWORD_1 }}
       PASSWD2: ${{ secrets.DB_TEST_USER_PASSWORD_2 }}
