--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -63,12 +63,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@3.04
+      env:
+        API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
       with:
           name: arquisoft/dede_es4c/webapp
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: webapp
+          buildargs: API_URI
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
