--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -3,7 +3,7 @@ name: CI de prueba
 on:
   push:
     branches:
-      - pruebaDespliegue
+      - filtroCodecov
 
 jobs:
   unit-test-webapp:
@@ -19,81 +19,3 @@ jobs:
     - run: npm ci
     - run: npm test
     - uses: codecov/codecov-action@v2
-  unit-test-restapi:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: restapi
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: 16
-    - run: npm ci
-    - run: npm test
-    - uses: codecov/codecov-action@v2
-  # e2e-tests:
-  #   needs: [unit-test-webapp, unit-test-restapi]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/setup-node@v2
-  #     with:
-  #       node-version: 16
-  #   - run: npm --prefix webapp install
-  #   - run: npm --prefix restapi install
-  #   - run: npm --prefix webapp run build
-  #   - run: npm --prefix webapp run test:e2e
-  docker-push-webapp:
-    name: Push webapp Docker Image to GitHub Packages
-    runs-on: ubuntu-latest
-    needs: [unit-test-webapp, unit-test-restapi]
-    # needs: [e2e-tests]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
-      with:
-          name: arquisoft/dede_es4c/webapp
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
-          registry: ghcr.io
-          workdir: webapp
-  docker-push-restapi:
-    name: Push restapi Docker Image to GitHub Packages
-    runs-on: ubuntu-latest
-    needs: [unit-test-webapp, unit-test-restapi]
-    # needs: [e2e-tests]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
-      with:
-          name: arquisoft/dede_es4c/restapi
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
-          registry: ghcr.io
-          workdir: restapi
-  deploy:
-    name: Deploy over SSH
-    runs-on: ubuntu-latest
-    needs: [docker-push-restapi, docker-push-webapp]
-    steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_PUSH_TOKEN }}
-      - name: Deploy over SSH
-        uses: fifsky/ssh-action@master
-        with:
-          host: ${{ secrets.DEPLOY_HOST2 }}
-          user: ${{ secrets.DEPLOY_USER2 }}
-          key: ${{ secrets.DEPLOY_KEY }}
-          command: |
-            wget https://raw.githubusercontent.com/arquisoft/dede_es4c/pruebaDespliegue/docker-compose-deploy.yml -O docker-compose.yml
-            docker-compose stop
-            docker-compose rm -f
-            docker-compose pull   
-            docker-compose up -d
