--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -81,12 +81,15 @@ jobs:
       - uses: actions/checkout@v3
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@v4
+        env:
+          MONGO_DB: mongodb+srv://es4c:es4c@cluster0.hcz1f.mongodb.net/bar_pinchos?retryWrites=true&w=majority
         with:
           name: arquisoft/dede_es4c/restapi
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
+          buildargs: MONGO_DB
   deploy:
     name: Deploy over SSH
     runs-on: ubuntu-latest
