--- a/restapi/package.json
+++ b/restapi/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node-dev ./server.ts",
-    "test": "cd tests && jest --runInBand && jest --runInBand"
+    "test": "cd tests && jest --runInBand"
   },
   "keywords": [],
   "author": "",
