Prueba cors y env en restapi

--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -83,13 +83,14 @@ jobs:
         uses: elgohr/Publish-Docker-Github-Action@v4
         env:
           MONGO_DB_URI: mongodb+srv://es4c:es4c@cluster0.hcz1f.mongodb.net/bar_pinchos?retryWrites=true&w=majority
+          WEBAPP_URI: http://${{ secrets.DEPLOY_HOST2 }}:3000
         with:
           name: arquisoft/dede_es4c/restapi
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
-          buildargs: MONGO_DB
+          buildargs: MONGO_DB_URI
   deploy:
     name: Deploy over SSH
     runs-on: ubuntu-latest
