--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -9,5 +9,7 @@ ARG MONGO_DB_URI
 ENV MONGO_DB=$MONGO_DB_URI
 ARG WEBAPP_URI
 ENV WEBAPP=$WEBAPP_URI
+ARG JWT_SECRET
+ENV SECRET=$JWT_SECRET
 
 CMD [ "npm", "start" ]
