Añadida env webapp

--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -65,6 +65,7 @@ jobs:
       uses: elgohr/Publish-Docker-Github-Action@3.04
       env:
         API_URI: http://${{ secrets.DEPLOY_HOST2 }}:5000/api
+        WEBAPP_URI: http://${{ secrets.DEPLOY_HOST2 }}:3000
       with:
           name: arquisoft/dede_es4c/webapp
           username: ${{ github.actor }}
