--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -7,6 +7,8 @@ RUN npm install
 
 ARG API_URI="http://localhost:5000/api"
 ENV REACT_APP_API_URI=$API_URI
+ARG WEBAPP_URI
+ENV WEBAPP=$WEBAPP_URI
 
 #Create an optimized version of the webapp
 RUN npm run build
