--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -7,7 +7,7 @@ RUN npm install
 
 ARG API_URI="http://localhost:5000/api"
 ENV REACT_APP_API_URI=$API_URI
-ARG WEBAPP_URI
+ARG WEBAPP_URI="http://dede-es4c.centralus.cloudapp.azure.com:3000"
 ENV WEBAPP=$WEBAPP_URI
 
 #Create an optimized version of the webapp
