--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -26,7 +26,7 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [unit-test-webapp]
+    #needs: [unit-test-webapp]
     # needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
@@ -46,7 +46,7 @@ jobs:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     # needs: [e2e-tests]
-    needs: [unit-test-restapi]
+    #needs: [unit-test-restapi]
     steps:
       - uses: actions/checkout@v3
       - name: Publish to Registry
