Cambio en el dockerfile

--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -14,5 +14,5 @@ ENV WEBAPP=$WEBAPP_URI
 RUN npm run build
 
 #Ver como podemos llamar npm run prod aquí
-CMD [ "npm", "run", "prod" ]
-#CMD ["npm", "start"]
+#CMD [ "npm", "run", "prod" ]
+CMD ["npm", "start"]
