se ñade opcion en el package para parar los tests

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "webapp",
   "jest":{
-    "collectCoverageFrom":["**/components/*.tsx", "**/pages/*.tsx"]
+    "collectCoverageFrom":["**/components/*.tsx", "**/pages/*.tsx"],
+	"detectOpenHandles": true
   },
 	"version": "0.1.0",
 	"dependencies": {
