--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,8 @@
 {
 	"name": "webapp",
+	"jest":{
+    		"collectCoverageFrom":["**/components/*.tsx", "**/pages/*.tsx"]
+  	},
 	"version": "0.1.0",
 	"dependencies": {
 		"@emotion/react": "^11.7.1",
