--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,8 +1,11 @@
 {
 	"name": "webapp",
-	"jest":{
-    		"collectCoverageFrom":["**/components/*.tsx", "**/pages/*.tsx"]
-  	},
+	"jest": {
+		"collectCoverageFrom": [
+			"**/components/*.tsx",
+			"**/pages/*.tsx"
+		]
+	},
 	"version": "0.1.0",
 	"dependencies": {
 		"@emotion/react": "^11.7.1",
@@ -33,7 +36,7 @@
 		"web-vitals": "^2.1.2"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "cross-env GENERATE_SOURCEMAP=false  react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --coverage",
 		"test:e2e": "cd e2e && jest",
@@ -63,6 +66,7 @@
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
 		"@types/puppeteer": "^5.4.4",
+		"cross-env": "^7.0.3",
 		"expect-puppeteer": "^6.0.2",
 		"jest-cucumber": "^3.0.1",
 		"jest-puppeteer": "^6.0.3",
