--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -57,12 +57,12 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [unit-test-webapp, unit-test-restapi]
+    needs: [unit-test-webapp]
     # needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@3.04
+      uses: elgohr/Publish-Docker-Github-Action@v4
       with:
           name: arquisoft/dede_es4c/webapp
           username: ${{ github.actor }}
