--- a/.github/workflows/asw2122.yml
+++ b/.github/workflows/asw2122.yml
@@ -57,7 +57,7 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [unit-test-webapp, unit-test-restapi]
+    needs: [unit-test-webapp]
     # needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
