Ahora también se utiliza node geocoder para calcular el coste de envío, por si falla la api

--- a/restapi/package.json
+++ b/restapi/package.json
@@ -20,6 +20,7 @@
     "express-validator": "6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
+    "node-geocoder": "^4.0.0",
     "prom-client": "^14.0.1",
     "shippo": "^1.7.1"
   },
