--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,10 +1,7 @@
 {
 	"name": "webapp",
-	"jest": {
-		"collectCoverageFrom": [
-			"**/components/*.tsx",
-			"**/pages/*.tsx"
-		]
+	"jest":{
+		"collectCoverageFrom":["**/components/*.tsx", "**/pages/*.tsx"]
 	},
 	"version": "0.1.0",
 	"dependencies": {
@@ -36,10 +33,10 @@
 		"web-vitals": "^2.1.2"
 	},
 	"scripts": {
-		"start": "cross-env GENERATE_SOURCEMAP=false  react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --coverage",
-		"test:e2e": "cd e2e && jest",
+		"test:e2e": "cd e2e && jest --watchAll --detectOpenHandles=true",
 		"eject": "react-scripts eject",
 		"prod": "ts-node-dev ./server.ts"
 	},
@@ -66,7 +63,6 @@
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
 		"@types/puppeteer": "^5.4.4",
-		"cross-env": "^7.0.3",
 		"expect-puppeteer": "^6.0.2",
 		"jest-cucumber": "^3.0.1",
 		"jest-puppeteer": "^6.0.3",
