--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -42,18 +42,18 @@ jobs:
       - run: npm ci
       - run: npm test
       - uses: codecov/codecov-action@v3
-  # e2e-tests:
-  #   needs: [unit-test-webapp, unit-test-restapi]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: actions/setup-node@v3
-  #     with:
-  #       node-version: 16
-  #   - run: npm --prefix webapp install
-  #   - run: npm --prefix restapi install
-  #   - run: npm --prefix webapp run build
-  #   - run: npm --prefix webapp run test:e2e
+  e2e-tests:
+     needs: [unit-test-webapp, unit-test-restapi]
+     runs-on: ubuntu-latest
+     steps:
+     - uses: actions/checkout@v3
+     - uses: actions/setup-node@v3
+       with:
+         node-version: 16
+     - run: npm --prefix webapp install
+     - run: npm --prefix restapi install
+     - run: npm --prefix webapp run build
+     - run: npm --prefix webapp run test:e2e
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
