--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -57,8 +57,7 @@ jobs:
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [unit-test-webapp]
-    # needs: [e2e-tests]
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v2
     - name: Publish to Registry
@@ -72,8 +71,7 @@ jobs:
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    # needs: [e2e-tests]
-    needs: [unit-test-restapi]
+    needs: [e2e-tests]
     steps:
       - uses: actions/checkout@v3
       - name: Publish to Registry
