Corregidos los dockerfile

--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -5,4 +5,9 @@ WORKDIR /app
 #Install the dependencies
 RUN npm install
 
+ARG MONGO_DB_URI
+ENV MONGO_DB=$MONGO_DB_URI
+ARG JWT_SECRET
+ENV SECRET=$JWT_SECRET
+
 CMD [ "npm", "start" ]
