--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -108,7 +108,7 @@ jobs:
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           user: ${{ secrets.DEPLOY_USER }}
-          password: ${{ secrets.DEPLOY_PASSWORD }}
+          pass: ${{ secrets.DEPLOY_PASSWORD }}
           command: |
             wget https://raw.githubusercontent.com/arquisoft/dede_es4c/develop/docker-compose-deploy.yml -O docker-compose.yml
             docker-compose stop
