--- a/.github/workflows/prueba.yml
+++ b/.github/workflows/prueba.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v4
       env:
-        API_URI: http://${{ secrets.DEPLOY_HOST2 }}:5000/api
-        WEBAPP_URI: http://${{ secrets.DEPLOY_HOST2 }}:3000
+        API_URI: https://${{ secrets.DEPLOY_HOST2 }}:5000/api
+        WEBAPP_URI: https://${{ secrets.DEPLOY_HOST2 }}:3000
       with:
           name: arquisoft/dede_es4c/webapp
           username: ${{ github.actor }}
