--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -10,4 +10,9 @@ ENV MONGO_DB=$MONGO_DB_URI
 ARG JWT_SECRET
 ENV SECRET=$JWT_SECRET
 
+ARG PRIVATE_KEY
+ENV HTTPS_KEY=$PRIVATE_KEY
+ARG CERTIFICATE
+ENV HTTPS_CERTIFICATE=$CERTIFICATE
+
 CMD [ "npm", "start" ]
