--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -8,7 +8,7 @@ RUN npm install
 
 ARG API_URI="http://localhost:5000/api"
 ENV REACT_APP_API_URI=$API_URI
-ARG WEBAPP_URI="http://dede-es4c.centralus.cloudapp.azure.com:3000"
+ARG WEBAPP_URI="https://dede-es4c.centralus.cloudapp.azure.com:3000"
 ENV WEBAPP=$WEBAPP_URI
 
 ARG PRIVATE_KEY
@@ -20,5 +20,5 @@ ENV HTTPS_CERTIFICATE=$CERTIFICATE
 RUN npm run build
 
 #Ver como podemos llamar npm run prod aquí
-#CMD [ "npm", "run", "prod" ]
-CMD ["npm", "start"]
+CMD [ "npm", "run", "prod" ]
+#CMD ["npm", "start"]
